--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -60,8 +60,8 @@
     "multiselect": "[↑/↓]: Select / [space]: Toggle selection / [a]: Toggle all / [enter]: Submit answer"
   },
   "infos": {
-    "scaffolding": "Scaffolding project in $targetDirectory...",
-    "generatingKeypair": "Generating program keypair...",
+    "scaffold": "Scaffold project in $targetDirectory",
+    "generateKeypair": "Generate program keypair",
     "done": "Done. Now run:"
   }
 }
