--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -50,8 +50,8 @@
     "cannotOverrideDirectory": "Cannot override target directory \"$targetDirectory\". Run with option --force to override.",
     "invalidSolanaVersion": "Invalid Solana version: $version.",
     "operationCancelled": "Operation cancelled",
-    "solanaKeygenFailed": "Failed to generate program keypair",
-    "solanaKeygenNotFound": "Command `solana-keygen` unavailable. Please install the Solana CLI."
+    "solanaCliNotFound": "Command `$command` unavailable. Please install the Solana CLI.",
+    "solanaKeygenFailed": "Failed to generate program keypair"
   },
   "defaultToggleOptions": {
     "active": "Yes",
@@ -62,8 +62,9 @@
     "multiselect": "[↑/↓]: Select / [space]: Toggle selection / [a]: Toggle all / [enter]: Submit answer"
   },
   "infos": {
-    "scaffold": "Scaffold project in $targetDirectory",
+    "detectSolanaVersion": "Detect Solana version",
     "generateKeypair": "Generate program keypair",
+    "scaffold": "Scaffold project in $targetDirectory",
     "done": "Done. Now run:"
   }
 }
