--- a/locales/fr-FR.json
+++ b/locales/fr-FR.json
@@ -53,10 +53,11 @@
   "errors": {
     "anchorCliNotFound": "Commande `$command` indisponible. Veuillez installer Anchor dans votre terminal.",
     "cannotOverrideDirectory": "Impossible de remplacer le répertoire cible \"$targetDirectory\". Exécutez avec l'option --force pour remplacer.",
-    "invalidSolanaVersion": "Version Solana invalide\u00a0: $version.",
-    "operationCancelled": "Operation annulée",
+    "invalidVersion": "Version de $tool invalide\u00a0: $version.",
+    "operationCancelled": "Operation annulée.",
+    "rustVersionIncompatibleWithSolana": "La version de Solana $solanaVersion nécessite au moins Rust $minimumRustVersion installé, Rust $rustVersion trouvé.",
     "solanaCliNotFound": "Commande `$command` indisponible. Veuillez installer Solana dans votre terminal.",
-    "solanaKeygenFailed": "La génération de la paire de clés a échoué"
+    "solanaKeygenFailed": "La génération de la paire de clés a échoué."
   },
   "defaultToggleOptions": {
     "active": "Oui",
@@ -67,8 +68,9 @@
     "multiselect": "[↑/↓]: Sélectionner / [espace]: Basculer la sélection / [a]: Basculer tout / [entrée]: Valider"
   },
   "infos": {
-    "detectAnchorVersion": "Détect la version d'Anchor",
-    "detectSolanaVersion": "Détect la version de Solana",
+    "detectAnchorVersion": "Détecte la version d'Anchor",
+    "detectRustVersion": "Détecte la version de Rust",
+    "detectSolanaVersion": "Détecte la version de Solana",
     "generateKeypair": "Génére la paire de clés du program",
     "scaffold": "Génére le projet dans $targetDirectory",
     "done": "Terminé. Exécutez maintenant\u00a0:"
