Upgrade from `@solana/web3.js` to `@solana/kit`

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -33,7 +33,7 @@
     "selectOptions": {
       "js": {
         "title": "JavaScript Client",
-        "desc": "A TypeScript library compatible with the new web3.js"
+        "desc": "A TypeScript library compatible with @solana/kit"
       },
       "rust": {
         "title": "Rust Client",
